--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.6.0",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.8",
     "vue-class-component": "^7.2.3",
+    "vue-notification": "^1.3.20",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0"
   },
